k8s-msa/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: msa
  labels:
    project: msa-on-k8s
